--- a/hw1/requirements.txt
+++ b/hw1/requirements.txt
@@ -4,4 +4,7 @@ protobuf
 torch >= 1.3
 evaluate
 transformers >= 4.33.3
-scikit-learn == 1.1.2 
+scikit-learn == 1.1.2
+numpy
+pandas
+tqdm    # This helps us in visualizing the completion of the loop
