--- a/hw1/requirements.txt
+++ b/hw1/requirements.txt
@@ -1,11 +1,12 @@
-accelerate >= 0.12.0
 sentencepiece != 0.1.92
 protobuf
-torch >= 1.3
-evaluate
-transformers >= 4.33.3
-dataset # 版本要是啥?
+# torch >= 1.3
 scikit-learn == 1.1.2
 numpy
 pandas
 tqdm    # This helps us in visualizing the completion of the loop
+nltk==3.7
+transformers==4.22.2
+datasets==2.5.2
+accelerate==0.13.0
+evaluate
